@@ -1,5 +1,8 @@
 package org.checkerframework.framework.type;
 
+import org.checkerframework.checker.calledmethods.qual.EnsuresCalledMethods;
+import org.checkerframework.checker.mustcall.qual.InheritableMustCall;
+import org.checkerframework.checker.mustcall.qual.Owning;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import org.checkerframework.checker.signature.qual.BinaryName;
 import org.checkerframework.checker.signature.qual.DotSeparatedIdentifiers;
@@ -9,9 +12,11 @@ import org.checkerframework.javacutil.AnnotationBuilder;
 import org.checkerframework.javacutil.AnnotationUtils;
 import org.checkerframework.javacutil.BugInCF;
 import org.checkerframework.javacutil.InternalUtils;
+import org.checkerframework.javacutil.SystemUtil;
 import org.checkerframework.javacutil.UserError;
 import org.plumelib.reflection.Signatures;
 
+import java.io.Closeable;
 import java.io.File;
 import java.io.IOException;
 import java.lang.annotation.Annotation;
@@ -19,6 +24,8 @@ import java.lang.annotation.ElementType;
 import java.lang.annotation.Target;
 import java.net.JarURLConnection;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
@@ -29,17 +36,17 @@ import java.util.Enumeration;
 import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Locale;
 import java.util.Set;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
-import java.util.regex.Pattern;
 
 import javax.annotation.processing.ProcessingEnvironment;
 import javax.lang.model.element.Element;
 import javax.lang.model.element.ElementKind;
 import javax.lang.model.element.PackageElement;
 import javax.lang.model.element.TypeElement;
-import javax.tools.Diagnostic.Kind;
+import javax.tools.Diagnostic;
 
 /**
  * This class assists the {@link AnnotatedTypeFactory} by reflectively looking up the list of
@@ -62,29 +69,39 @@ import javax.tools.Diagnostic.Kind;
  * #isSupportedAnnotationClass(Class)}. See {@code
  * org.checkerframework.checker.units.UnitsAnnotationClassLoader} for an example.
  */
-public class AnnotationClassLoader {
+@SuppressWarnings(
+        "mustcall:inconsistent.mustcall.subtype" // No need to check that AnnotationClassLoaders are
+// closed. (Just one is created per type factory.)
+)
+@InheritableMustCall({})
+public class AnnotationClassLoader implements Closeable {
     /** For issuing errors to the user. */
     protected final BaseTypeChecker checker;
 
     // For loading from a source package directory
     /** The package name. */
     private final @DotSeparatedIdentifiers String packageName;
+
     /** The package name, with periods replaced by slashes. */
     private final String packageNameWithSlashes;
+
     /** The atomic package names (the package name split at dots). */
     private final List<@Identifier String> fullyQualifiedPackageNameSegments;
+
     /** The name of a Checker's qualifier package. */
     private static final String QUAL_PACKAGE = "qual";
 
     // For loading from a Jar file
     /** The suffix for a .jar file. */
     private static final String JAR_SUFFIX = ".jar";
+
     /** The suffix for a .class file. */
     private static final String CLASS_SUFFIX = ".class";
 
     // Constants
     /** The package separator. */
     private static final char DOT = '.';
+
     /** The path separator, in .jar files, binary names, etc. */
     private static final char SLASH = '/';
 
@@ -98,7 +115,8 @@ public class AnnotationClassLoader {
     private final URL resourceURL;
 
     /** The class loader used to load annotation classes. */
-    protected final URLClassLoader classLoader;
+    @SuppressWarnings("builder:required.method.not.called") // this class is @MustCall({})
+    protected final @Owning URLClassLoader classLoader;
 
     /**
      * The annotation classes bundled with a checker (located in its qual directory) that are deemed
@@ -108,17 +126,16 @@ public class AnnotationClassLoader {
      */
     private final Set<Class<? extends Annotation>> supportedBundledAnnotationClasses;
 
-    /** The package separator: ".". */
-    private static final Pattern DOT_LITERAL_PATTERN =
-            Pattern.compile(Character.toString(DOT), Pattern.LITERAL);
-
     /**
      * Constructor for loading annotations defined for a checker.
      *
      * @param checker a {@link BaseTypeChecker} or its subclass
      */
-    @SuppressWarnings("signature") // TODO: reduce use of string manipulation
-    public AnnotationClassLoader(final BaseTypeChecker checker) {
+    @SuppressWarnings({
+        "signature", // TODO: reduce use of string manipulation
+        "this-escape"
+    })
+    public AnnotationClassLoader(BaseTypeChecker checker) {
         this.checker = checker;
         processingEnv = checker.getProcessingEnvironment();
 
@@ -139,8 +156,7 @@ public class AnnotationClassLoader {
         fullyQualifiedPackageNameSegments = new ArrayList<>();
 
         // from the fully qualified package name, split it at every dot then add to the list
-        fullyQualifiedPackageNameSegments.addAll(
-                Arrays.asList(DOT_LITERAL_PATTERN.split(packageName)));
+        fullyQualifiedPackageNameSegments.addAll(SystemUtil.DOT_SPLITTER.splitToList(packageName));
 
         classLoader = getClassLoader();
 
@@ -172,6 +188,16 @@ public class AnnotationClassLoader {
         loadBundledAnnotationClasses();
     }
 
+    @EnsuresCalledMethods(value = "classLoader", methods = "close")
+    @Override
+    public void close() {
+        try {
+            classLoader.close();
+        } catch (IOException e) {
+            checker.message(Diagnostic.Kind.NOTE, "Failed to close AnnotationClassLoader");
+        }
+    }
+
     /**
      * Scans all classpaths and returns the resource URL to the jar which contains the checker's
      * qual package, or the qual package directory if it exists, or null if no jar or directory
@@ -180,7 +206,7 @@ public class AnnotationClassLoader {
      * @return a URL to the jar that contains the qual package, or to the qual package's directory,
      *     or null if no jar or directory contains the qual package
      */
-    private final @Nullable URL getURLFromClasspaths() {
+    private @Nullable URL getURLFromClasspaths() {
         // TODO: This method could probably be replaced with
         // io.github.classgraph.ClassGraph#getClasspathURIs()
 
@@ -247,16 +273,16 @@ public class AnnotationClassLoader {
      * @param url a URL referring to either a jar or a directory
      * @return true if the jar or the directory contains the qual package, false otherwise
      */
-    private final boolean containsPackage(final URL url) {
+    private boolean containsPackage(URL url) {
         // see whether the resource URL has a protocol of jar or file
         if (url.getProtocol().equals("jar")) {
             // try to open up the jar file
             try {
                 JarURLConnection connection = (JarURLConnection) url.openConnection();
-                JarFile jarFile = connection.getJarFile();
-
-                // check to see if the jar file contains the package
-                return checkJarForPackage(jarFile);
+                try (JarFile jarFile = connection.getJarFile()) {
+                    // check to see if the jar file contains the package
+                    return checkJarForPackage(jarFile);
+                }
             } catch (IOException e) {
                 // do nothing for missing or un-openable Jar files
             }
@@ -278,7 +304,7 @@ public class AnnotationClassLoader {
      * @return true if the jar file contains the qual package, false otherwise
      */
     @SuppressWarnings("JdkObsolete")
-    private final boolean checkJarForPackage(final JarFile jar) {
+    private boolean checkJarForPackage(JarFile jar) {
         Enumeration<JarEntry> jarEntries = jar.entries();
 
         // loop through the entries in the jar
@@ -319,8 +345,7 @@ public class AnnotationClassLoader {
      *     name
      * @return true if the qual package exists within the root directory, false otherwise
      */
-    private final boolean checkDirForPackage(
-            final File currentDir, final Iterator<String> pkgNames) {
+    private boolean checkDirForPackage(File currentDir, Iterator<String> pkgNames) {
         // if the iterator has no more package name segments, then we've found
         // the qual directory of interest
         if (!pkgNames.hasNext()) {
@@ -356,7 +381,7 @@ public class AnnotationClassLoader {
      * @param absolutePathToDirectory an absolute path to a directory
      * @return a URL reference to the directory, or null if the URL is malformed
      */
-    private final @Nullable URL getDirectoryURL(final String absolutePathToDirectory) {
+    private @Nullable URL getDirectoryURL(String absolutePathToDirectory) {
         URL directoryURL = null;
 
         try {
@@ -365,7 +390,7 @@ public class AnnotationClassLoader {
             processingEnv
                     .getMessager()
                     .printMessage(
-                            Kind.NOTE,
+                            Diagnostic.Kind.NOTE,
                             "Directory URL " + absolutePathToDirectory + " is malformed");
         }
 
@@ -379,15 +404,21 @@ public class AnnotationClassLoader {
      * @param absolutePathToJarFile an absolute path to a jar file
      * @return a URL reference to the jar file, or null if the URL is malformed
      */
-    private final @Nullable URL getJarURL(final String absolutePathToJarFile) {
+    private @Nullable URL getJarURL(String absolutePathToJarFile) {
         URL jarURL = null;
 
         try {
-            jarURL = new URL("jar:file:" + absolutePathToJarFile + "!/");
-        } catch (MalformedURLException e) {
+            String normalizedPath = absolutePathToJarFile.replace("\\", "/");
+            String osName = System.getProperty("os.name").toString().toLowerCase(Locale.ENGLISH);
+            String prefix = osName.startsWith("windows") ? "jar:file:///" : "jar:file:";
+
+            jarURL = new URI(prefix + normalizedPath + "!/").toURL();
+        } catch (MalformedURLException | URISyntaxException e) {
             processingEnv
                     .getMessager()
-                    .printMessage(Kind.NOTE, "Jar URL " + absolutePathToJarFile + " is malformed");
+                    .printMessage(
+                            Diagnostic.Kind.NOTE,
+                            "Jar URL " + absolutePathToJarFile + " is malformed");
         }
 
         return jarURL;
@@ -410,18 +441,14 @@ public class AnnotationClassLoader {
      *
      * @return an immutable linked hashset of the classpaths
      */
-    private final Set<String> getClasspaths() {
+    private Set<String> getClasspaths() {
         Set<String> paths = new LinkedHashSet<>();
 
         // add all extension paths
-        String extdirs = System.getProperty("java.ext.dirs");
-        if (extdirs != null && !extdirs.isEmpty()) {
-            paths.addAll(Arrays.asList(extdirs.split(File.pathSeparator)));
-        }
+        paths.addAll(SystemUtil.getPathsProperty("java.ext.dirs"));
 
         // add all paths in CLASSPATH, -cp, and -classpath
-        paths.addAll(
-                Arrays.asList(System.getProperty("java.class.path").split(File.pathSeparator)));
+        paths.addAll(SystemUtil.getPathsProperty("java.class.path"));
 
         // add all paths that are examined by the classloader
         if (classLoader != null) {
@@ -441,7 +468,7 @@ public class AnnotationClassLoader {
      * @return the classloader used to load the checker class, or the system classloader, or null if
      *     both are unavailable
      */
-    private final @Nullable URLClassLoader getClassLoader() {
+    private @Nullable URLClassLoader getClassLoader() {
         ClassLoader result = InternalUtils.getClassLoaderForClass(checker.getClass());
         if (result instanceof URLClassLoader) {
             return (@Nullable URLClassLoader) result;
@@ -455,35 +482,38 @@ public class AnnotationClassLoader {
     @SuppressWarnings("unused") // for debugging
     protected final void printPaths() {
         // all paths in Xbootclasspath
-        String[] bootclassPaths =
-                System.getProperty("sun.boot.class.path").split(File.pathSeparator);
-        processingEnv.getMessager().printMessage(Kind.NOTE, "bootclass path:");
-        for (String path : bootclassPaths) {
-            processingEnv.getMessager().printMessage(Kind.NOTE, "\t" + path);
+        processingEnv.getMessager().printMessage(Diagnostic.Kind.NOTE, "bootclass path:");
+        for (String path : SystemUtil.getPathsProperty("sun.boot.class.path")) {
+            processingEnv.getMessager().printMessage(Diagnostic.Kind.NOTE, "\t" + path);
         }
 
         // all extension paths
-        String[] extensionDirs = System.getProperty("java.ext.dirs").split(File.pathSeparator);
-        processingEnv.getMessager().printMessage(Kind.NOTE, "extension dirs:");
-        for (String path : extensionDirs) {
-            processingEnv.getMessager().printMessage(Kind.NOTE, "\t" + path);
+        processingEnv.getMessager().printMessage(Diagnostic.Kind.NOTE, "extension dirs:");
+        for (String path : SystemUtil.getPathsProperty("java.ext.dirs")) {
+            processingEnv.getMessager().printMessage(Diagnostic.Kind.NOTE, "\t" + path);
         }
 
         // all paths in CLASSPATH, -cp, and -classpath
-        processingEnv.getMessager().printMessage(Kind.NOTE, "java.class.path property:");
-        for (String path : System.getProperty("java.class.path").split(File.pathSeparator)) {
-            processingEnv.getMessager().printMessage(Kind.NOTE, "\t" + path);
+        processingEnv.getMessager().printMessage(Diagnostic.Kind.NOTE, "java.class.path property:");
+        for (String path : SystemUtil.getPathsProperty("java.class.path")) {
+            processingEnv.getMessager().printMessage(Diagnostic.Kind.NOTE, "\t" + path);
         }
 
         // add all paths that are examined by the classloader
-        processingEnv.getMessager().printMessage(Kind.NOTE, "classloader examined paths:");
+        processingEnv
+                .getMessager()
+                .printMessage(Diagnostic.Kind.NOTE, "classloader examined paths:");
         if (classLoader != null) {
             URL[] urls = classLoader.getURLs();
             for (int i = 0; i < urls.length; i++) {
-                processingEnv.getMessager().printMessage(Kind.NOTE, "\t" + urls[i].getFile());
+                processingEnv
+                        .getMessager()
+                        .printMessage(Diagnostic.Kind.NOTE, "\t" + urls[i].getFile());
             }
         } else {
-            processingEnv.getMessager().printMessage(Kind.NOTE, "classloader unavailable");
+            processingEnv
+                    .getMessager()
+                    .printMessage(Diagnostic.Kind.NOTE, "classloader unavailable");
         }
     }
 
@@ -491,6 +521,7 @@ public class AnnotationClassLoader {
      * Loads the set of annotation classes in the qual directory of a checker shipped with the
      * Checker Framework.
      */
+    @SuppressWarnings("this-escape")
     private void loadBundledAnnotationClasses() {
         // retrieve the fully qualified class names of the annotations
         Set<@BinaryName String> annotationNames;
@@ -526,7 +557,6 @@ public class AnnotationClassLoader {
                 throw new BugInCF(
                         "AnnotationClassLoader: cannot open the Jar file " + resourceURL.getFile());
             }
-
         } else if (resourceURL != null && resourceURL.getProtocol().contentEquals("file")) {
             // If the checker class file is found within the file system itself within some
             // directory (usually development build directories), then process the package as a file
@@ -579,7 +609,7 @@ public class AnnotationClassLoader {
      * @return a set of fully qualified class names of the annotations
      */
     @SuppressWarnings("JdkObsolete")
-    private final Set<@BinaryName String> getBundledAnnotationNamesFromJar(final JarFile jar) {
+    private Set<@BinaryName String> getBundledAnnotationNamesFromJar(JarFile jar) {
         Set<@BinaryName String> annos = new LinkedHashSet<>();
 
         // get an enumeration iterator for all the content entries in the jar file
@@ -617,7 +647,7 @@ public class AnnotationClassLoader {
      *     by {@link #isSupportedAnnotationClass(Class)}
      */
     public final @Nullable Class<? extends Annotation> loadExternalAnnotationClass(
-            final @BinaryName String annoName) {
+            @BinaryName String annoName) {
         return loadAnnotationClass(annoName, true);
     }
 
@@ -629,7 +659,7 @@ public class AnnotationClassLoader {
      * @return a set of annotation classes
      */
     public final Set<Class<? extends Annotation>> loadExternalAnnotationClassesFromDirectory(
-            final String dirName) {
+            String dirName) {
         File rootDirectory = new File(dirName);
         Set<@BinaryName String> annoNames =
                 getAnnotationNamesFromDirectory(null, rootDirectory, rootDirectory);
@@ -650,10 +680,10 @@ public class AnnotationClassLoader {
      *     its sub-directories
      */
     @SuppressWarnings("signature") // TODO: reduce use of string manipulation
-    private final Set<@BinaryName String> getAnnotationNamesFromDirectory(
-            final @Nullable @DotSeparatedIdentifiers String packageName,
-            final File rootDirectory,
-            final File currentDirectory) {
+    private Set<@BinaryName String> getAnnotationNamesFromDirectory(
+            @Nullable @DotSeparatedIdentifiers String packageName,
+            File rootDirectory,
+            File currentDirectory) {
         Set<@BinaryName String> results = new LinkedHashSet<>();
 
         // Full path to root directory
@@ -661,14 +691,10 @@ public class AnnotationClassLoader {
 
         // check every file and directory within the current directory
         File[] directoryContents = currentDirectory.listFiles();
-        Arrays.sort(
-                directoryContents,
-                new Comparator<File>() {
-                    @Override
-                    public int compare(File o1, File o2) {
-                        return o1.getName().compareTo(o2.getName());
-                    }
-                });
+        if (directoryContents == null) {
+            throw new UserError("Directory does not exist: %s", currentDirectory);
+        }
+        Arrays.sort(directoryContents, Comparator.comparing(File::getName));
         for (File file : directoryContents) {
             if (file.isFile()) {
                 // TODO: simplify all this string manipulation.
@@ -729,7 +755,7 @@ public class AnnotationClassLoader {
      *     annotation is not supported by a checker, null is returned.
      */
     protected final @Nullable Class<? extends Annotation> loadAnnotationClass(
-            final @BinaryName String className, boolean issueError) {
+            @BinaryName String className, boolean issueError) {
 
         // load the class
         Class<?> cls = null;
@@ -794,7 +820,7 @@ public class AnnotationClassLoader {
      * @see #loadAnnotationClass(String, boolean)
      */
     protected final Set<Class<? extends Annotation>> loadAnnotationClasses(
-            final @Nullable Set<@BinaryName String> annoNames) {
+            @Nullable Set<@BinaryName String> annoNames) {
         Set<Class<? extends Annotation>> loadedClasses = new LinkedHashSet<>();
 
         if (annoNames != null && !annoNames.isEmpty()) {
@@ -821,8 +847,7 @@ public class AnnotationClassLoader {
      * @param annoClass an annotation class
      * @return true if the annotation is well defined, false if it isn't
      */
-    protected boolean hasWellDefinedTargetMetaAnnotation(
-            final Class<? extends Annotation> annoClass) {
+    protected boolean hasWellDefinedTargetMetaAnnotation(Class<? extends Annotation> annoClass) {
         return annoClass.getAnnotation(Target.class) != null
                 && AnnotationUtils.hasTypeQualifierElementTypes(
                         annoClass.getAnnotation(Target.class).value(), annoClass);
@@ -840,7 +865,7 @@ public class AnnotationClassLoader {
      * @param annoClass an annotation class
      * @return true if the annotation is supported, false if it isn't
      */
-    protected boolean isSupportedAnnotationClass(final Class<? extends Annotation> annoClass) {
+    protected boolean isSupportedAnnotationClass(Class<? extends Annotation> annoClass) {
         return true;
     }
 }
